--- a/MovieViewer/Base.lproj/Main.storyboard
+++ b/MovieViewer/Base.lproj/Main.storyboard
@@ -16,6 +16,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="DZ1-QH-oTm">
                                 <rect key="frame" x="0.0" y="108" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WLQ-8Z-FdL">
                                     <size key="itemSize" width="150" height="193"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -44,7 +45,7 @@
                                 </cells>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="134" sectionHeaderHeight="28" sectionFooterHeight="28" id="4Cl-LG-53j">
-                                <rect key="frame" x="0.0" y="108" width="320" height="458"/>
+                                <rect key="frame" x="0.0" y="107" width="320" height="459"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -56,25 +57,26 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MSk-ve-vn5">
-                                                    <rect key="frame" x="104" y="0.0" width="216" height="27"/>
+                                                    <rect key="frame" x="104" y="0.0" width="191" height="27"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mUg-fK-92g">
-                                                    <rect key="frame" x="104" y="35" width="216" height="90"/>
+                                                    <rect key="frame" x="104" y="35" width="191" height="90"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="rgY-pU-Qit">
-                                                    <rect key="frame" x="0.0" y="-12" width="102" height="137"/>
+                                                    <rect key="frame" x="8" y="8" width="88" height="117"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.039215686274509803" green="0.043137254901960784" blue="0.043137254901960784" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="overViewLable" destination="mUg-fK-92g" id="0F4-rI-k3O"/>
                                             <outlet property="posterView" destination="rgY-pU-Qit" id="iad-4b-Phe"/>
@@ -106,24 +108,26 @@
                                     <outletCollection property="gestureRecognizers" destination="EcQ-Ej-iyr" appends="YES" id="hsE-Xg-XAy"/>
                                 </connections>
                             </view>
-                            <searchBar contentMode="redraw" id="dHV-pA-tFI">
-                                <rect key="frame" x="35" y="63" width="250" height="44"/>
+                            <searchBar contentMode="redraw" barStyle="black" searchBarStyle="prominent" id="dHV-pA-tFI">
+                                <rect key="frame" x="35" y="63" width="285" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="yes" keyboardAppearance="alert" returnKeyType="search"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="alert"/>
                             </searchBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ObI-jp-4oQ">
-                                <rect key="frame" x="3" y="70" width="30" height="30"/>
+                                <rect key="frame" x="0.0" y="63" width="35" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="CollectionIcon"/>
+                                <state key="normal" title="Button" image="collectionViewPic"/>
                                 <connections>
                                     <action selector="didSwap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EPM-7d-NP9"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.062745098039215685" green="0.062745098039215685" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
                     </view>
-                    <navigationItem key="navigationItem" title="Movies" id="RUc-QJ-qCM" colorLabel="IBBuiltInLabel-Red"/>
+                    <navigationItem key="navigationItem" title="Movies" id="RUc-QJ-qCM" colorLabel="IBBuiltInLabel-Orange"/>
                     <connections>
                         <outlet property="collectionView" destination="DZ1-QH-oTm" id="FTa-dR-zbK"/>
                         <outlet property="networkErrorView" destination="SiJ-MD-WWa" id="EQR-2U-2Ug"/>
@@ -170,7 +174,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YSc-zb-XG7">
-                                        <rect key="frame" x="6" y="317" width="293" height="21"/>
+                                        <rect key="frame" x="6" y="317" width="298" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -178,7 +182,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="obu-6w-2SN">
-                                        <rect key="frame" x="6" y="346" width="108" height="21"/>
+                                        <rect key="frame" x="6" y="346" width="298" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -233,7 +237,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="CollectionIcon" width="120" height="120"/>
+        <image name="collectionViewPic" width="120" height="120"/>
         <image name="networkErrorPic" width="597" height="597"/>
     </resources>
 </document>
